# bizlens

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  LICENSE  Makefile  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
bizlens/: __init__.py  cache.py  config.py  db.py  warehouse.py
bizlens/analytics/: __init__.py  anomaly.py  cohort_analysis.py  funnel_analysis.py  kpi_engine.py  statistical_tests.py  trend_analysis.py
bizlens/api/: __init__.py  auth.py  main.py
bizlens/dashboard/: __init__.py  app.py  funnel_chart.py  kpi_cards.py  nl_to_sql.py  retention_heatmap.py  trend_chart.py
bizlens/infra/: Dockerfile  docker-compose.yml  postgres_roles.sql  render.yaml
bizlens/nlp/: __init__.py  embeddings.py
bizlens/reporting/: __init__.py  data_quality_checker.py  insight_generator.py  report_builder.py  scheduler.py
bizlens/sql/: __init__.py  etl_pipeline.py  olist_loader.py  query_library.py  query_optimizer.py  rls.py  schema_validator.py  vector_store.py
scripts/: __init__.py  capture_screenshots.py  deploy_seed.py  generate_sample_data.py  init_db.py
tests/: test_anomaly.py  test_cache.py  test_cohort_analysis.py  test_dashboard_fallback.py  test_data_quality.py  test_embeddings.py  test_funnel_analysis.py  test_funnel_selection.py  test_integration_warehouse.py  test_nl_to_sql.py  test_olist_loader.py  test_statistical_tests.py
