[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bizlens"
version = "0.1.0"
description = "Self-hosted Business Intelligence & Analytics platform with statistical rigour and AI-powered reporting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kunal Pasad" }]
keywords = ["business-intelligence", "analytics", "cohort-analysis", "funnel", "ab-testing"]

[tool.setuptools.packages.find]
include = ["bizlens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends() in argument defaults is the intended idiom.
ignore = ["E501", "B008"]
